fix photo overflow at bottom of faq page

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -426,3 +426,9 @@ body.films_index
   label
     font-size: 85%
     font-style: italic
+
+// the FAQ page
+body.welcome_faq
+  #me
+    overflow: auto
+    width: 100%
